--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/folksacademy.html">
 										<img src="assets/img/content/projects-2.jpg" alt="">
 									</a>
 								</div>
@@ -120,7 +120,7 @@
 												<a class="terms badge" href="#">Web Design</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/folksacademy.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -158,7 +158,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/folksrouter.html">
 										<img src="assets/img/content/projects-3.jpg" alt="">
 									</a>
 								</div>
@@ -172,7 +172,7 @@
 												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/folksrouter.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -184,7 +184,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/xalgo.html">
 										<img src="assets/img/content/projects-4.jpg" alt="">
 									</a>
 								</div>
@@ -198,7 +198,7 @@
 												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/xalgo.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -210,7 +210,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/folksyguys.html">
 										<img src="assets/img/content/projects-5.jpg" alt="">
 									</a>
 								</div>
@@ -224,7 +224,7 @@
 												<a class="terms badge" href="#">NFT</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/folksyguys.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -236,7 +236,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/dedit.html">
 										<img src="assets/img/content/projects-7.jpg" alt="">
 									</a>
 								</div>
@@ -250,7 +250,7 @@
 												<a class="terms badge" href="#">Web App Design</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/dedit.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -299,7 +299,7 @@
 							</div>
 						</div>
 						<div class="col-12 col-md-4 col-lg-5 text-md-end mt-3 mt-md-0">
-							<a class="btn magnetic-button" href="contact.html">Get In Touch! <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+							<a class="btn magnetic-button" href="contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 						</div>
 					</div>
 				</div>
