--- a/projects.html
+++ b/projects.html
@@ -262,7 +262,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/fev.html">
 										<img src="assets/img/content/projects-6.jpg" alt="">
 									</a>
 								</div>
@@ -276,7 +276,7 @@
 												<a class="terms badge" href="#">Development</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/fev.html">Show Project</a>
 											</div>
 										</div>
 									</div>
