--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Folks Finance xChain App</title>
+	<title>Folks Finance xApp</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="../assets/img/favicon.png">
@@ -118,13 +118,13 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp1.jpg" alt="">
 							</div>
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-2.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp2.jpg" alt="">
 							</div>
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-3.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp3.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -156,7 +156,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/projects/xapp4.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp4.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp5.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -216,7 +216,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp6.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -247,7 +247,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/projects/xapp/xapp7.jpg" alt="">
 							</div>
 						</div>
 					</div>
