--- a/projects/folksacademy.html
+++ b/projects/folksacademy.html
@@ -186,7 +186,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/projects/folksacademy/folksacademy1.jpg" alt="">
+								<img src="../assets/img/projects/folksacademy/folksacademy7.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -217,7 +217,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/projects/folksacademy/folksacademy7.jpg" alt="">
+								<img src="../assets/img/projects/folksacademy/folksacademy2.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -298,9 +298,9 @@
 							<!-- Socials -->
 							<div class="socials mt-5">
 								<nav class="nav justify-content-center">
-									<a class="nav-link swap-icon" href="../#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="mailto:contact@radulucian.com" target="_blank">Email <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="tel:+40766-999-143">Phone <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
@@ -422,9 +422,9 @@
 							<!-- Socials -->
 							<div class="socials offcanvas-body">
 								<nav class="nav">
-									<a class="nav-link swap-icon" href="../#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="mailto:contact@radulucian.com" target="_blank">Email <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="tel:+40766-999-143">Phone <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
