--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -269,9 +269,9 @@
 							<!-- Socials -->
 							<div class="socials mt-5">
 								<nav class="nav justify-content-center">
-									<a class="nav-link swap-icon" href="../#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="mailto:contact@radulucian.com" target="_blank">Email <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="tel:+40766-999-143">Phone <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
@@ -393,9 +393,9 @@
 							<!-- Socials -->
 							<div class="socials offcanvas-body">
 								<nav class="nav">
-									<a class="nav-link swap-icon" href="../#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="../#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="mailto:contact@radulucian.com" target="_blank">Email <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="tel:+40766-999-143">Phone <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
