--- a/projects/dedit.html
+++ b/projects/dedit.html
@@ -37,7 +37,7 @@
 				<div class="container header">
 					<!-- Navbar Brand-->
 					<div class="magnetic">
-						<a class="navbar-brand" href="..//">
+						<a class="navbar-brand" href="/">
 							Radu Lucian
 						</a>
 					</div>
@@ -111,20 +111,20 @@
 
 							<!-- Live Site -->
 							<div class="socials item">
-								<a class="nav-link d-inline-flex swap-icon ms-0" href="../#">Live Site <i class="icon bi bi-arrow-right-short"></i></a>
+								<a class="nav-link d-inline-flex swap-icon ms-0" href="https://dedit.io/" target=”_blank”>Live Site <i class="icon bi bi-arrow-right-short"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/projects/dedit/dedit1.jpg" alt="">
 							</div>
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-2.jpg" alt="">
+								<img src="../assets/img/projects/dedit/dedit3.jpg" alt="">
 							</div>
 							<div class="reveal-img item">
-								<img src="../assets/img/content/case-3.jpg" alt="">
+								<img src="../assets/img/projects/dedit/dedit4.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -159,7 +159,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="../assets/img/projects/xapp4.jpg" alt="">
+								<img src="../assets/img/projects/dedit/dedit2.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -279,7 +279,7 @@
 							<div class="offcanvas-body">
 								<ul class="navbar-nav menu pt-md-4">
 									<li class="nav-item">
-										<a href="..//" class="nav-link">Home <span class="item-count">(01)</span></a>
+										<a href="/" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="../projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
