--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
 								<div class="col-12 col-md-6 item">
 									<div class="content">
 										<a class="logo" href="#">
-											<img src="assets/img/content/award-1.png" alt="">
+											<img src="assets/img/content/education-1.png" alt="">
 										</a>
 										<p>Bachelor of Engineering - Telecommunications Networks and Software</p>
 									</div>
@@ -190,7 +190,7 @@
 								<div class="col-12 col-md-6 item">
 									<div class="content">
 										<a class="logo" href="#">
-											<img src="assets/img/content/award-2.png" alt="">
+											<img src="assets/img/content/education-2.png" alt="">
 										</a>
 										<p>Google UX Design Professional Certificate - Course offered by Google Career Certificates</p>
 									</div>
@@ -199,7 +199,7 @@
 								<div class="col-12 col-md-6 item">
 									<div class="content">
 										<a class="logo" href="#">
-											<img src="assets/img/content/award-3.png" alt="">
+											<img src="assets/img/content/education-3.png" alt="">
 										</a>
 										<p>British Council - IELTS C1 (Proficient user) English certificate </p>
 									</div>
@@ -289,7 +289,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
+								<div class="copyright">&copy; 2024 Radu Lucian</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
 									<a href="#header" class="smooth-anchor">Scroll to Top</a>
