--- a/projects/dedit.html
+++ b/projects/dedit.html
@@ -199,7 +199,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
+								<div class="copyright">&copy; 2024 Radu Lucian</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
 									<a href="../#header" class="smooth-anchor">Scroll to Top</a>
