--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+
+	<div id="loading-overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 1000; display: flex; justify-content: center; align-items: center;">
+		<p>Loading...</p>
+	</div>	
 	<!-- ***** Magic Cursor Area Start ***** -->
 	<div id="magic-cursor">
 		<div id="cursor"></div>
@@ -287,7 +291,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
+								<div class="copyright">&copy; 2024 Radu Lucian</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
 									<a href="../#header" class="smooth-anchor">Scroll to Top</a>
@@ -432,6 +436,7 @@
 
 	<!-- Main js -->
 	<script src="../assets/js/main.js"></script>
+	<script src="../assets/js/check.js"></script>
 </body>
 
 </html>
