--- a/projects/fev.html
+++ b/projects/fev.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+	<div id="loading-overlay">
+		<p>Loading...</p>
+	</div>
 	<!-- ***** Magic Cursor Area Start ***** -->
 	<div id="magic-cursor">
 		<div id="cursor"></div>
@@ -338,6 +341,7 @@
 
 	<!-- Main js -->
 	<script src="../assets/js/main.js"></script>
+	<script src="../assets/js/check.js"></script>
 </body>
 
 </html>
