--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -22,10 +22,9 @@
 </head>
 
 <body>
-
-	<div id="loading-overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 1000; display: flex; justify-content: center; align-items: center;">
+	<div id="loading-overlay">
 		<p>Loading...</p>
-	</div>	
+	</div>
 	<!-- ***** Magic Cursor Area Start ***** -->
 	<div id="magic-cursor">
 		<div id="cursor"></div>
