--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<div class="card portfolio-item layout-2 scale has-shadow">
 									<div class="image-holder">
 										<!-- Card Thumb -->
-										<a class="card-thumb" href="projects/xapp.html">
+										<a class="card-thumb" href="projects/folksacademy.html">
 											<img src="assets/img/content/projects-2.jpg" alt="">
 										</a>
 										<!-- Card Overlay -->
@@ -186,7 +186,7 @@
 														<a class="terms badge outlined" href="#">Web Design</a>
 													</div>
 													<div class="project-link">
-														<a href="projects/xapp.html">Show Project</a>
+														<a href="projects/folksacademy.html">Show Project</a>
 													</div>
 												</div>
 											</div>
@@ -199,7 +199,7 @@
 								<div class="card portfolio-item layout-2 scale has-shadow">
 									<div class="image-holder">
 										<!-- Card Thumb -->
-										<a class="card-thumb" href="projects/xapp.html">
+										<a class="card-thumb" href="projects/folksrouter.html">
 											<img src="assets/img/content/projects-3.jpg" alt="">
 										</a>
 										<!-- Card Overlay -->
@@ -212,7 +212,7 @@
 														<a class="terms badge outlined" href="#">UI/UX</a>
 													</div>
 													<div class="project-link">
-														<a href="projects/xapp.html">Show Project</a>
+														<a href="projects/folksrouter.html">Show Project</a>
 													</div>
 												</div>
 											</div>
