--- a/index.html
+++ b/index.html
@@ -765,10 +765,6 @@
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
 								<div class="copyright">&copy; 2024 Radu Lucian</a></div>
-								<!-- Scroll To Top -->
-								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
-									<a href="#header" class="smooth-anchor">Scroll to Top</a>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -862,7 +858,7 @@
 						<!-- Offcanvas Social -->
 						<div class="offcanvas-social">
 							<div class="offcanvas-header">
-								<h5 class="offcanvas-title mt-0">Socials</h5>
+								<h5 class="offcanvas-title mt-0">Connect</h5>
 							</div>
 
 							<hr>
