--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-location-pin"></i>
-											<a class="content" href="#">Bucharest, RO</a>
+											<a class="content" href="">Bucharest, RO</a>
 										</li>
 									</ul>
 								</div>
