--- a/projects/xalgo.html
+++ b/projects/xalgo.html
@@ -91,8 +91,8 @@
 								<!-- Portfolio Meta -->
 								<div class="portfolio-meta d-flex align-items-center">
 									<div class="portfolio-terms">
-										<a class="terms" href="../#">Web App Design</a>
-										<a class="terms" href="../#">UI/UX</a>
+										<a class="terms" href="">Web App Design</a>
+										<a class="terms" href="">UI/UX</a>
 									</div>
 								</div>
 								<h2>xAlgo</h2>
