--- a/auth.html
+++ b/auth.html
@@ -52,13 +52,13 @@
 								<p>This case study is password protected. Access is granted only with prior authorization from the owner. The content displayed on these screens may be subject to non-disclosure agreements and may not be available to the general public. Unauthorized access, distribution, or reproduction of this content is strictly prohibited and may lead to legal consequences. By accessing this case study, you confirm that you agree to the information stated above.</p>
 							</div>
 						</div>
-						<div class="col-12 col-lg-7 order-last order-md-last mt-sm-4 mt-lg-0">
+						<div class="col-12 col-lg-7 order-last order-md-last mt-sm-4 mt-lg-0 spacer24">
 							<form id="contact-form" class="contact-form">
 								<div class="form-floating mb-3">
 									<input type="password" class="form-control" id="password" placeholder="Password">
 									<label for="name">Password</label>
 								</div>
-								<button type="submit" class="btn magnetic-button" onclick="validateForm(event)">Access <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
+								<button type="submit" id="btn-mobile" class="btn magnetic-button" onclick="validateForm(event)">Access <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
 								<p id="error-message" class="p4-roman errorc wrongpassword"></p>
 							</form>
 							<p class="form-message"></p>
