--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<!-- Intro -->
 							<div class="intro d-flex justify-content-between align-items-center">
 								<h3 class="title">Projects</h3>
-								<a class="btn btn-outline content-btn swap-icon" href="projects.html">View all <i class="icon bi bi-arrow-right-short"></i></a>
+								<a id="btn-outline-mobile" class="btn btn-outline content-btn swap-icon" href="projects.html">View all <i class="icon bi bi-arrow-right-short"></i></a>
 							</div>
 						</div>
 					</div>
@@ -740,7 +740,7 @@
 							<div class="cta-text">
 								<span class="line-item">Together</span>
 								<span class="line"></span>
-								<a class="btn magnetic-button" href="contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a id="btn-mobile" class="btn magnetic-button" href="contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
 							<!-- Socials -->
