--- a/projects/dedit.html
+++ b/projects/dedit.html
@@ -178,7 +178,7 @@
 							<div class="cta-text">
 								<span class="line-item">Together</span>
 								<span class="line"></span>
-								<a class="btn magnetic-button" href="../contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a id="btn-mobile" class="btn magnetic-button" href="../contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
 							<!-- Socials -->
