--- a/contact.html
+++ b/contact.html
@@ -122,19 +122,19 @@
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-social-linkedin"></i>
-											<a class="content" href="https://www.linkedin.com/in/lucian9radu/">lucian9radu</a>
+											<a class="content" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">lucian9radu</a>
 										</li>
 										
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-envelope-open"></i>
-											<a class="content" href="mailto:contact@radulucian.com">contact@radulucian.com</a>
+											<a class="content" href="mailto:contact@radulucian.com" target="_blank">contact@radulucian.com</a>
 										</li>
 
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-location-pin"></i>
-											<a class="content" href="">Bucharest, RO</a>
+											<a class="content" href="https://maps.app.goo.gl/sVCMsMjcy9qiEwqh6" target="_blank">Bucharest, RO</a>
 										</li>
 									</ul>
 								</div>
