--- a/contact.html
+++ b/contact.html
@@ -141,53 +141,29 @@
 							</div>
 						</div>
 						<div class="col-12 col-lg-7 order-first order-md-last mt-sm-4 mt-lg-0">
-							<form id="contact-form" class="contact-form" method="POST" action="assets/php/form.php">
+							<form id="contact-form" class="contact-form">
 								<div class="form-floating mb-3">
-									<input type="text" class="form-control" id="name" placeholder="Name">
+									<input type="text" class="form-control" id="name" placeholder="Name" required>
 									<label for="name">Name</label>
 								</div>
 								<div class="form-floating mb-3">
-									<input type="email" class="form-control" id="email" placeholder="name@example.com">
+									<input type="email" class="form-control" id="email" placeholder="name@example.com" required>
 									<label for="email">Email address</label>
 								</div>
 								<div class="form-floating mb-3">
-									<input type="number" class="form-control" id="phone" placeholder="name@example.com">
+									<input type="number" class="form-control" id="phone" placeholder="Phone">
 									<label for="phone">Phone</label>
 								</div>
 								<div class="form-floating mb-3">
-									<input type="text" class="form-control" id="company-name" placeholder="name@example.com">
+									<input type="text" class="form-control" id="company-name" placeholder="Company Name">
 									<label for="company-name">Company Name</label>
 								</div>
 								<div class="form-floating mb-3">
-									<input type="url" class="form-control" id="website" placeholder="name@example.com">
+									<input type="url" class="form-control" id="website" placeholder="Company Website">
 									<label for="website">Company Website</label>
 								</div>
-								<div class="form-group mb-3">
-									<div class="form-label">I'm interested in:</div>
-									<div class="form-input-group">
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="options-base" id="option-branding">
-											<label class="btn magnetic-button btn-outline" for="option-branding">Branding<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="options-base" id="option-web-design">
-											<label class="btn magnetic-button btn-outline" for="option-web-design">Web Design<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="options-base" id="option-app-design">
-											<label class="btn magnetic-button btn-outline" for="option-app-design">App Design<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="options-base" id="option-other">
-											<label class="btn magnetic-button btn-outline" for="option-other">Other<span></span></label>
-										</div>
-									</div>
-								</div>
 								<div class="form-floating mb-4">
-									<textarea class="form-control" id="message" placeholder="Leave a comment here" style="height: 100px"></textarea>
+									<textarea class="form-control" id="message" placeholder="Leave a comment here" style="height: 100px" maxlength="4000" required></textarea>
 									<label for="message">Message</label>
 								</div>
 								<button type="submit" class="btn magnetic-button">Submit Message <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
