--- a/auth.html
+++ b/auth.html
@@ -53,6 +53,7 @@
 							</div>
 						</div>
 						<div class="col-12 col-lg-7 order-last order-md-last mt-sm-4 mt-lg-0 spacer24">
+							<div class="spacer48"></div>
 							<form id="contact-form" class="contact-form">
 								<div class="form-floating mb-3">
 									<input type="password" class="form-control" id="password" placeholder="Password">
