--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
 								<!-- Item -->
 								<div class="col-12 col-md-6 item">
 									<div class="content">
-										<a class="logo" href="">
+										<a class="logo" href="https://etti.upb.ro/en/" target="_blank">
 											<img src="assets/img/content/education-1.png" alt="">
 										</a>
 										<p>Bachelor of Engineering - Telecommunications Networks and Software</p>
@@ -189,7 +189,7 @@
 								<!-- Item -->
 								<div class="col-12 col-md-6 item">
 									<div class="content">
-										<a class="logo" href="">
+										<a class="logo" href="https://www.coursera.org/professional-certificates/google-ux-design" target="_blank">
 											<img src="assets/img/content/education-2.png" alt="">
 										</a>
 										<p>Google UX Design Professional Certificate - Course offered by Google Career Certificates</p>
@@ -198,7 +198,7 @@
 								<!-- Item -->
 								<div class="col-12 col-md-6 item">
 									<div class="content">
-										<a class="logo" href="">
+										<a class="logo" href="https://takeielts.britishcouncil.org/take-ielts/what-ielts" target="_blank">
 											<img src="assets/img/content/education-3.png" alt="">
 										</a>
 										<p>British Council - IELTS C1 (Proficient user) English certificate </p>
