--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 						<!-- Service Item -->
 						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
-								<div class="item-count secondary-p-color">0-1</div>
+								<div class="item-count-last">0-1</div>
 								<div class="content">
 									<h4 class="mt-0">End-to-End UX</h4>
 									<p>From inception to delivery, I combine research, creativity and collaboration, crafting pixel-perfect user interfaces.</p>
