--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -102,14 +102,14 @@
 						<div class="col-12 col-lg-6 items portfolio-meta mt-3 mt-md-0">
 							<!-- Task -->
 							<div class="task">
-								<h6 class="title mb-3">Task</h6>
-								<span class="details">Our decentralized lending platforms offered limited liquidity and accessibility, restraining assets trading to a maximum of one chain.</span>
+								<span class="task-title">Task</span>
+								<span class="details">A new web app that enables cross-chain lending protocols and a decentralized account creation for seamless assets transfers, so that our platforms no longer restrain assets trading to a maximum of one chain.</span>
 							</div>
 
-							<!-- Solution -->
+							<!-- Role -->
 							<div class="task">
-								<h6 class="title mb-3">Solution</h6>
-								<span class="details">Enabling cross-chain lending protocols and a decentralized account creation for seamless assets transfers.</span>
+								<span class="role-title">Role</span>
+								<span class="details">Lead the UX process by improving the design system to suit requirements, as well as ideating the UI from wireframes to mockups, based on findings from self-conducted research.</span>
 							</div>
 
 							<!-- Live Site -->
