--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
 									<textarea class="form-control" id="message" placeholder="Leave a comment here" style="height: 100px" maxlength="4000" required></textarea>
 									<label for="message">Message</label>
 								</div>
-								<button type="submit" class="btn magnetic-button">Submit Message <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
+								<button type="submit" class="btn magnetic-button">Submit message <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
 							</form>
 							<p class="form-message"></p>
 						</div>
@@ -182,7 +182,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy; 2024 Radu Lucian</a></div>
+								<div class="copyright">&copy; 2025 Radu Lucian</a></div>
 							</div>
 						</div>
 					</div>
