--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 										<h1 class="title">timeless stories.</h1>
 									</div>
 								</div>
-								<p class="sub-title w-50 mt-4 ms-auto">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;My expertise lies in crafting experiences that seamlessly integrate functionality and aesthetics, elevating user satisfaction and driving impactful business outcomes.</p>
+								<p class="sub-title w-50 mt-4 ms-auto">My expertise lies in crafting experiences that seamlessly integrate functionality and aesthetics, elevating user satisfaction and driving impactful business outcomes.</p>
 							</div>
 						</div>
 					</div>
@@ -289,7 +289,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy; 2024 Radu Lucian</a></div>
+								<div class="copyright">&copy; 2025 Radu Lucian</a></div>
 							</div>
 						</div>
 					</div>
