--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="projects.html" class="nav-link">Projects</a>
+							<a href="projects" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
-							<a href="about.html" class="nav-link">About</a>
+							<a href="about" class="nav-link">About</a>
 						</li>
 						<li class="nav-item">
-							<a href="contact.html" class="nav-link">Contact</a>
+							<a href="contact" class="nav-link">Contact</a>
 						</li>
 					</ul>
 
@@ -111,7 +111,7 @@
 								<!-- Content -->
 								<div class="content d-flex flex-column flex-md-row justify-content-md-between">
 									<div class="hero-button order-last order-md-first mt-4 mt-md-0">
-										<a class="btn magnetic-button" href="contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+										<a class="btn magnetic-button" href="contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 									</div>
 									<p class="sub-title order-first order-md-last">I am a results-driven UX Designer with a strong focus on driving meaningful change. With a keen eye for detail and a deep understanding of user-centric design principles, I facilitate positive change and deliver impactful solutions.</p>
 								</div>
@@ -135,7 +135,7 @@
 							<!-- Intro -->
 							<div class="intro d-flex justify-content-between align-items-center">
 								<h3 class="title">Projects</h3>
-								<a id="btn-outline-mobile" class="btn btn-outline content-btn swap-icon" href="projects.html">View all <i class="icon bi bi-arrow-right-short"></i></a>
+								<a id="btn-outline-mobile" class="btn btn-outline content-btn swap-icon" href="projects">View all <i class="icon bi bi-arrow-right-short"></i></a>
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@
 
 							<div class="services_wrapper">
 								<p class="sub-title">Transforming ideas into digital realities by blending strategic insights with innovative design, helping brands thrive in a rapidly evolving digital landscape.</p>
-								<a class="btn magnetic-button btn-outline services_wrapper_button" href="about.html">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a class="btn magnetic-button btn-outline services_wrapper_button" href="about">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 						</div>
 					</div>
@@ -555,13 +555,13 @@
 							<ul class="list-group list-group-flush">
 								<!-- Item -->
 								<li class="list-group-item">
-									<a href="about.html" class="clickable-item">
+									<a href="about" class="clickable-item">
 										<div class="content">
 											<h4 class="title mt-0 mb-3">Folks Finance</h4>
 											<span class="tags mt-3 mt-md-0">UX Designer &nbsp;|&nbsp; Oct 2022 - Present</span>
 										</div>
 										<!-- Award Button -->
-										<a class="award-btn rounded-pill" href="about.html">
+										<a class="award-btn rounded-pill" href="about">
 											<i class="icon rotate bi bi-arrow-right-short m-0"></i>
 										</a>
 									</a>
@@ -570,13 +570,13 @@
 
 								<!-- Item -->
 								<li class="list-group-item">
-									<a href="about.html" class="clickable-item">
+									<a href="about" class="clickable-item">
 										<div class="content">
 											<h4 class="title mt-0 mb-3">FEV Automotive</h4>
 											<span class="tags mt-3 mt-md-0">UX Engineer &nbsp;|&nbsp; Jul 2022 – Sep 2022</span>
 										</div>
 										<!-- Award Button -->
-										<a class="award-btn rounded-pill" href="about.html">
+										<a class="award-btn rounded-pill" href="about">
 											<i class="icon rotate bi bi-arrow-right-short m-0"></i>
 										</a>
 									</a>
@@ -584,13 +584,13 @@
 
 								<!-- Item -->
 								<li class="list-group-item">
-									<a href="about.html" class="clickable-item">
+									<a href="about" class="clickable-item">
 										<div class="content">
 											<h4 class="title mt-0 mb-3">Proxify</h4>
 											<span class="tags mt-3 mt-md-0">UX Designer &nbsp;|&nbsp; May 2020 – Jun 2022</span>
 										</div>
 										<!-- Award Button -->
-										<a class="award-btn rounded-pill" href="about.html">
+										<a class="award-btn rounded-pill" href="about">
 											<i class="icon rotate bi bi-arrow-right-short m-0"></i>
 										</a>
 									</a>
@@ -740,7 +740,7 @@
 							<div class="cta-text">
 								<span class="line-item">Together</span>
 								<span class="line"></span>
-								<a id="btn-mobile" class="btn magnetic-button" href="contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a id="btn-mobile" class="btn magnetic-button" href="contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
 							<!-- Socials -->
@@ -843,13 +843,13 @@
 										<a href="/" class="nav-link active">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
+										<a href="projects" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
+										<a href="about" class="nav-link">About <span class="item-count">(03)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact <span class="item-count">(04)</span></a>
+										<a href="contact" class="nav-link">Contact <span class="item-count">(04)</span></a>
 									</li>
 								</ul>
 							</div>
