--- a/about.html
+++ b/about.html
@@ -48,13 +48,13 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="projects.html" class="nav-link">Projects</a>
+							<a href="projects" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
-							<a href="about.html" class="nav-link active">About</a>
+							<a href="about" class="nav-link active">About</a>
 						</li>
 						<li class="nav-item">
-							<a href="contact.html" class="nav-link">Contact</a>
+							<a href="contact" class="nav-link">Contact</a>
 						</li>
 					</ul>
 
@@ -265,7 +265,7 @@
 							<div class="cta-text">
 								<span class="line-item">Together</span>
 								<span class="line"></span>
-								<a class="btn magnetic-button" href="contact.html">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a class="btn magnetic-button" href="contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
 							<!-- Socials -->
@@ -368,13 +368,13 @@
 										<a href="/" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
+										<a href="projects" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link active">About <span class="item-count">(03)</span></a>
+										<a href="about" class="nav-link active">About <span class="item-count">(03)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact <span class="item-count">(04)</span></a>
+										<a href="contact" class="nav-link">Contact <span class="item-count">(04)</span></a>
 									</li>
 								</ul>
 							</div>
