--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/folksacademy.html">
+									<a class="card-thumb" href="projects/folksacademy">
 										<img src="assets/img/content/projects-2.jpg" alt="">
 									</a>
 								</div>
@@ -120,7 +120,7 @@
 												<a class="terms badge" href="">Web Design</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/folksacademy.html">Show Project</a>
+												<a href="projects/folksacademy">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -132,7 +132,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xapp.html">
+									<a class="card-thumb" href="projects/xapp">
 										<img src="assets/img/content/projects-1.jpg" alt="">
 									</a>
 								</div>
@@ -146,7 +146,7 @@
 												<a class="terms badge" href="">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xapp.html">Show Project</a>
+												<a href="projects/xapp">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -158,7 +158,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/folksrouter.html">
+									<a class="card-thumb" href="projects/folksrouter">
 										<img src="assets/img/content/projects-3.jpg" alt="">
 									</a>
 								</div>
@@ -172,7 +172,7 @@
 												<a class="terms badge" href="">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/folksrouter.html">Show Project</a>
+												<a href="projects/folksrouter">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -184,7 +184,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/xalgo.html">
+									<a class="card-thumb" href="projects/xalgo">
 										<img src="assets/img/content/projects-4.jpg" alt="">
 									</a>
 								</div>
@@ -198,7 +198,7 @@
 												<a class="terms badge" href="">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/xalgo.html">Show Project</a>
+												<a href="projects/xalgo">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -210,7 +210,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/folksyguys.html">
+									<a class="card-thumb" href="projects/folksyguys">
 										<img src="assets/img/content/projects-5.jpg" alt="">
 									</a>
 								</div>
@@ -224,7 +224,7 @@
 												<a class="terms badge" href="">NFT</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/folksyguys.html">Show Project</a>
+												<a href="projects/folksyguys">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -236,7 +236,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/dedit.html">
+									<a class="card-thumb" href="projects/dedit">
 										<img src="assets/img/content/projects-7.jpg" alt="">
 									</a>
 								</div>
@@ -250,7 +250,7 @@
 												<a class="terms badge" href="">Web App Design</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/dedit.html">Show Project</a>
+												<a href="projects/dedit">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -262,7 +262,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="projects/fev.html">
+									<a class="card-thumb" href="projects/fev">
 										<img src="assets/img/content/projects-6.jpg" alt="">
 									</a>
 								</div>
@@ -276,7 +276,7 @@
 												<a class="terms badge" href="">Development</a>
 											</div>
 											<div class="project-link">
-												<a href="projects/fev.html">Show Project</a>
+												<a href="projects/fev">Show Project</a>
 											</div>
 										</div>
 									</div>
