--- a/about.html
+++ b/about.html
@@ -130,8 +130,8 @@
 										<span class="count">01.</span>
 										<h4 class="title mt-0 mb-3">Folks Finance</h4>
 										<h6 class="position my-3">UX Designer</h6>
-										<span class="badge small">Oct 2022 – Present</span>
-										<p>I am currently leading the end-to-end user experience design process of fintech products. I define success metrics for each project and iterate based on user testing feedback and post-launch performance, improving usability and user satisfaction.</p>
+										<span class="badge small">Oct 2022 – Jan 2025</span>
+										<p>I led the end-to-end user experience design process of 12 fintech products. I defined success metrics for each project and iterated based on user testing feedback and post-launch performance, improving usability and user satisfaction.</p>
 									</div>
 								</div>
 								<!-- Item -->
