--- a/projects/folksacademy.html
+++ b/projects/folksacademy.html
@@ -96,20 +96,20 @@
 									</div>
 								</div>
 								<h2>Folks Academy</h2>
-								<p>For this project, we kept an user-first approach across the entire process, as the end goal was to have our userbase understand all the needed aspects of DeFi. This has been done by conducting thorough research into user needs and preferences, and by crafting the interface to ensure intuitive navigation and accessibility for learners of all levels.</p>
+								<p>For this project, I kept an user-first approach across the entire process, as the end goal was to have our userbase understand all the needed aspects of DeFi. This has been done by conducting thorough research into user needs and preferences, and by crafting the interface to ensure intuitive navigation and accessibility for learners of all levels.</p>
 							</div>
 						</div>
 						<div class="col-12 col-lg-6 items portfolio-meta mt-3 mt-md-0">
 							<!-- Task -->
 							<div class="task">
-								<h6 class="title mb-3">Task</h6>
-								<span class="details">Looking into the forums of our web apps, we noticed that several users were unaware of how the DeFi market is working, or how they can lower their investments risks as much as possible.</span>
+								<span class="task-title">Task</span>
+								<span class="details">A free online video course platform covering multiple trading aspects, from the fundamentals of blockchain to advanced topics of DeFi, to help all users get a good understanding of how the crypto market works.</span>
 							</div>
 
-							<!-- Solution -->
+							<!-- Role -->
 							<div class="task">
-								<h6 class="title mb-3">Solution</h6>
-								<span class="details">A free online video course platform covering multiple trading aspects, from the fundamentals of blockchain to advanced topics of DeFi.</span>
+								<span class="role-title">Role</span>
+								<span class="details">Take the web app's interface from concept to delivery as the sole UX Designer of the project. Conduct research to build the information architecture, ideate user friendly mockups and validate them through usability testing before handing them off to development.</span>
 							</div>
 
 							<!-- Live Site -->
@@ -291,19 +291,19 @@
 				<div class="container">
 					<div class="row justify-content-center text-center">
 						<div class="col-12 col-md-10 col-lg-7">
-							<h2 class="title mb-0 mb-md-2">Let's Create Someting</h2>
+							<h2 class="title mb-0 mb-md-2">Want to See More?</h2>
 							<div class="cta-text">
-								<span class="line-item">Together</span>
+								<span class="line-item">Next Project</span>
 								<span class="line"></span>
-								<a id="btn-mobile" class="btn magnetic-button" href="../contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a id="btn-mobile" class="btn magnetic-button" href="folksrouter">Folks Router <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
-							<!-- Socials -->
+							<!-- Other buttons -->
 							<div class="socials mt-5">
 								<nav class="nav justify-content-center">
-									<a class="nav-link swap-icon" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="mailto:contact@radulucian.com" target="_blank">Email <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="tel:+40766-999-143">Phone <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../projects" target="_blank">All Projects <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../about" target="_blank">About <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../contact">Contact <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
