--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 									<a href="about" class="clickable-item">
 										<div class="content">
 											<h4 class="title mt-0 mb-3">Folks Finance</h4>
-											<span class="tags mt-3 mt-md-0">UX Designer &nbsp;|&nbsp; Oct 2022 - Present</span>
+											<span class="tags mt-3 mt-md-0">UX Designer &nbsp;|&nbsp; Oct 2022 - Jan 2025</span>
 										</div>
 										<!-- Award Button -->
 										<a class="award-btn rounded-pill" href="about">
