--- a/projects/folksyguys.html
+++ b/projects/folksyguys.html
@@ -168,19 +168,19 @@
 				<div class="container">
 					<div class="row justify-content-center text-center">
 						<div class="col-12 col-md-10 col-lg-7">
-							<h2 class="title mb-0 mb-md-2">Let's Create Someting</h2>
+							<h2 class="title mb-0 mb-md-2">Want to See More?</h2>
 							<div class="cta-text">
-								<span class="line-item">Together</span>
+								<span class="line-item">Next Project</span>
 								<span class="line"></span>
-								<a id="btn-mobile" class="btn magnetic-button" href="../contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a id="btn-mobile" class="btn magnetic-button" href="fev">FEV BLC <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
-							<!-- Socials -->
+							<!-- Other buttons -->
 							<div class="socials mt-5">
 								<nav class="nav justify-content-center">
-									<a class="nav-link swap-icon" href="https://www.linkedin.com/in/lucian9radu/" target="_blank">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="mailto:contact@radulucian.com" target="_blank">Email <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="tel:+40766-999-143">Phone <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../projects" target="_blank">All Projects <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../about" target="_blank">About <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../contact">Contact <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
