--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 							<div class="services_wrapper">
 								<p class="sub-title">Transforming ideas into digital realities by blending strategic insights with innovative design, helping brands thrive in a rapidly evolving digital landscape.</p>
-								<a class="btn magnetic-button btn-outline services_wrapper_button" href="about">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a id="btn-outline-mobile" class="btn magnetic-button btn-outline services_wrapper_button" href="about">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 						</div>
 					</div>
